--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,19 +7,24 @@
     <link rel="stylesheet" href="palindrome.css">
 </head>
 <body>
-    <h1  id="heading">Palindrome Checker</h1>
-    <div class="container">
-        <input type="text" id="input" placeholder="Enter Valid Phrase">
-        <button id="check-btn">CHECK</button><button id="clear">X</button>
-        <div id="result"><h4 >OUTPUT</h4>
+    <h1 id="heading">Palindrome Checker</h1>
+    <div class="container-wrapper">
+        <div class="container">
+            <input type="text" id="input" placeholder="Enter Valid Phrase">
+            <button id="check-btn">CHECK</button>
+            <button id="clear">X</button>
+            <div id="result">
+        <h4>OUTPUT</h4>
         <hr>
         <p id="output-text"></p>
     </div>
+        </div>
     </div>
+    
     <hr>
     <footer>
         <p>MADE BY DHRUV SOHAL</p>
     </footer>
+    <script src="palindrome.js"></script>
 </body>
-<script src="palindrome.js"></script>
 </html>
